--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">仿豹哥健身</string>
+    <string name="app_name">我爱健身</string>
 
     <string name="introduction">简介</string>
     <string name="video_desc_review">评论</string>
